renaming html elements

--- a/TPA1/TPA2/Web.config
+++ b/TPA1/TPA2/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <clear/>
-    <add name="DBCS" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\Ahmed\Documents\Visual Studio 2012\Projects\TPA1\TPA1\Database\TPA.mdf;Integrated Security=True;Connect Timeout=30"/>
+    <add name="DBCS" connectionString="Data Source=MOAHMED-PC\SQLEXPRESS;Initial Catalog=TPA;Integrated Security=True"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
