--- a/TPA1/TPA2/Web.config
+++ b/TPA1/TPA2/Web.config
@@ -1,12 +1,14 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <connectionStrings>
-    <clear/>
-    <add name="DBCS" connectionString="Data Source=MOAHMED-PC\SQLEXPRESS;Initial Catalog=TPA;Integrated Security=True" />
+    <clear />
+    <add name="DBCS" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\Ahmed\Documents\GitHub\3PA-----13-5-2015\TPA1\TPA2\Database\TPA.mdf;Integrated Security=True;Connect Timeout=30" />
+    <add name="TPAConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\Ahmed\Documents\GitHub\3PA-----13-5-2015\TPA1\TPA2\Database\TPA.mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
@@ -21,4 +23,7 @@
       </forms>
     </authentication>
   </system.web>
+ <appSettings>
+      <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    </appSettings>
 </configuration>
