--- a/TPA1/TPA2/TPA2.csproj
+++ b/TPA1/TPA2/TPA2.csproj
@@ -61,8 +61,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Account\Login.aspx" />
-    <Content Include="AddBatch.aspx" />
+    <Content Include="Batches\AddBatch.aspx" />
+    <Content Include="Batches\Batch.aspx" />
     <Content Include="css\reset.css" />
     <Content Include="css\style.css" />
     <Content Include="img\cd-arrow.svg" />
@@ -77,24 +77,28 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Home.aspx" />
-    <Content Include="ForgotPassword.aspx" />
+    <Content Include="Registration\ForgotPassword.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account\Login.aspx.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Account\Login.aspx.designer.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="AddBatch.aspx.cs">
+    <Compile Include="Batches\AddBatch.aspx.cs">
       <DependentUpon>AddBatch.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="AddBatch.aspx.designer.cs">
+    <Compile Include="Batches\AddBatch.aspx.designer.cs">
       <DependentUpon>AddBatch.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Batches\Batch.aspx.cs">
+      <DependentUpon>Batch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Batches\Batch.aspx.designer.cs">
+      <DependentUpon>Batch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Batches\Batch_Bus.cs" />
+    <Compile Include="Model\Batch_Model.cs" />
+    <Compile Include="DataAcess.cs" />
     <Compile Include="ConnectionClass.cs" />
+    <Compile Include="DBconnection.cs" />
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -102,6 +106,12 @@
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Model\Employee_Model.cs" />
+    <Compile Include="Model\Holder_Model.cs" />
+    <Compile Include="Model\Insurance_Model.cs" />
+    <Compile Include="Model\Policy_Model.cs" />
+    <Compile Include="Model\Provider_Model.cs" />
+    <Compile Include="Model\Titles_Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration\ChangePassword.aspx.cs">
       <DependentUpon>ChangePassword.aspx</DependentUpon>
@@ -124,11 +134,11 @@
     <Compile Include="Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
-    <Compile Include="ForgotPassword.aspx.cs">
+    <Compile Include="Registration\ForgotPassword.aspx.cs">
       <DependentUpon>ForgotPassword.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ForgotPassword.aspx.designer.cs">
+    <Compile Include="Registration\ForgotPassword.aspx.designer.cs">
       <DependentUpon>ForgotPassword.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -147,7 +157,9 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
